BusOne/src/objects/Sample_Lot_Add_vod__c.object
<CustomObject>
    <description>This object stores requests for adding sample lots.</description>
    <fields>
        <fullName>Comments_vod__c</fullName>
        <description>Comments field to be used as part of the Found Sample Lot process.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lot_vod__c</fullName>
        <description>Field to capture the Lot # of the Found Sample Lot.</description>
        <label>Lot #</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Unique external ID for future use</description>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_vod__c</fullName>
        <description>Field to capture the Quantity of the Found Sample Lot.</description>
        <inlineHelpText>This is an integer field. A decimal value will be truncated.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_vod__c</fullName>
        <description>Field to capture the Sample Name of the Found Sample Lot.</description>
        <label>Sample</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cholecap 10mg</fullName>
                </value>
                <value>
                    <fullName>Cholecap 20mg</fullName>
                </value>
                <value>
                    <fullName>Cholecap 30mg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sample Lot Add</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000000}</displayFormat>
        <label>Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Lot Adds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>